snapshots/parsers/cst/assignment/let_preserves_whitespace.snap
---
source: src/parsers/cst/assignment.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: LetStatement
      children:
        - kind: LetKeyword
          text: Let
        - kind: Whitespace
          text: "    "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: "    "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: "    "
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "5"
    - kind: Whitespace
      text: "    "
    - kind: Newline
      text: "\n"
